--- a/charts/tibco-cp-addon-eventprocessing/charts/tp-cp-eventprocessing-be/charts/be-webserver/templates/cp-bewebserver.yaml
+++ b/charts/tibco-cp-addon-eventprocessing/charts/tp-cp-eventprocessing-be/charts/be-webserver/templates/cp-bewebserver.yaml
@@ -110,6 +110,11 @@ spec:
             configMapKeyRef:
               name: {{ include "be-webserver.cp-env-configmap" . }}
               key: CP_INSTANCE_ID
+        - name: TP_DP_PROXY_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
+              key: TP_DP_PROXY_HOST
         - name: CP_SUBSCRIPTION_SINGLE_NAMESPACE
           valueFrom:
             configMapKeyRef:
