Publishing Tibco Developer Hub 1.15.0 Charts to public repo.

--- a/charts/tibco-cp-devhub/charts/tibcohub-recipes/Chart.yaml
+++ b/charts/tibco-cp-devhub/charts/tibcohub-recipes/Chart.yaml
@@ -1,4 +1,5 @@
-# Copyright © 2025. Cloud Software Group, Inc.
+#
+# Copyright © 2023-2026. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
@@ -7,8 +8,8 @@ name: tibcohub-recipes
 description: TIBCO Developer Hub Data Plane Recipes
 home: https://github.com/tibco/tp-dev-hub.git
 type: application
-version: 1.14.5
-appVersion: "1.14.0"
+version: 1.15.0
+appVersion: "1.15.0"
 keywords:
   - tibco-platform
   - control-plane
