--- a/charts/tibco-cp-devhub/values.yaml
+++ b/charts/tibco-cp-devhub/values.yaml
@@ -1,4 +1,4 @@
-# Copyright © 2025. Cloud Software Group, Inc.
+# Copyright © 2023-2026. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
@@ -31,7 +31,7 @@ tibcohub-contrib:
 
 image:
   name: dx-alpine
-  tag: 3.22
+  tag: 3.23.3
   pullPolicy: IfNotPresent
 # Pod Security Context configuration
 # This configuration ensures that the pod is run with non-root privileges for enhanced security.
