--- a/charts/tibco-developer-hub/templates/ingress_public_traefik.yaml
+++ b/charts/tibco-developer-hub/templates/ingress_public_traefik.yaml
@@ -1,13 +1,14 @@
-# Copyright © 2025. Cloud Software Group, Inc.
+# Copyright © 2023-2026. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
 {{ if eq .Values.global.cp.resources.ingress.ingressController "traefik" -}}
+{{- $fullName := include "tibcohub.fullname" . -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    traefik.ingress.kubernetes.io/router.middlewares: {{ .Release.Namespace }}-{{ include "common.names.fullname" . }}-strip-prefix@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: {{ .Release.Namespace }}-{{ $fullName }}-strip-prefix@kubernetescrd
     {{- with .Values.global.cp.resources.ingress.annotations }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
@@ -21,7 +22,7 @@ spec:
         paths:
           - backend:
               service:
-                name: {{ include "tibcohub.fullname" . }}
+                name: {{ $fullName }}
                 port:
                   number: {{ .Values.service.ports.backend }}
             path: {{ .Values.ingress.pathPrefix }}
@@ -30,7 +31,7 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: {{ include "common.names.fullname" . }}-strip-prefix
+  name: {{ $fullName }}-strip-prefix
 spec:
   stripPrefix:
     prefixes:
