--- a/charts/tibco-cp-devhub/Chart.yaml
+++ b/charts/tibco-cp-devhub/Chart.yaml
@@ -1,16 +1,17 @@
-# Copyright © 2025. Cloud Software Group, Inc.
+#
+# Copyright © 2023-2026. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
 apiVersion: v2
 name: tibco-cp-devhub
-version: 1.14.0
-appVersion: 1.14.0
+version: 1.15.0-alpha.20
+appVersion: 1.15.0
 description: TIBCO Platform base for Developer Hub Capability
 dependencies:
   - name: tibcohub-recipes
-    version: "1.14.*"
+    version: "1.15.*"
     condition: tibcohub-recipes.enabled
   - name: tibcohub-contrib
-    version: "1.14.*"
+    version: "1.15.*"
     condition: tibcohub-contrib.enabled
