--- a/charts/tibco-cp-devhub/charts/tibcohub-recipes/templates/tibcohub.yaml
+++ b/charts/tibco-cp-devhub/charts/tibcohub-recipes/templates/tibcohub.yaml
@@ -1,4 +1,5 @@
-# Copyright © 2025. Cloud Software Group, Inc.
+#
+# Copyright © 2023-2026. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
@@ -12,16 +13,16 @@ metadata:
 data:
   version.json: |
     {
-      "capabilityVersion": "1.14.0",
-      "minCPVersion": "1.12.0",
+      "capabilityVersion": "1.15.0",
+      "minCPVersion": "1.15.0",
       "maxCPVersion": "",
       "releaseDate": {{ .Values.capabilities.tibcohub.releaseDate | quote }},
       "releaseNotes": {{ .Values.capabilities.tibcohub.releaseNotes | quote }},
       "minVersionRequiredForUpgrade": "1.4.0",
       "minRollbackVersion": "1.10.0",
       "minDPVersion": {
-        "dp-core-infrastructure": "1.12.0",
-        "dp-configure-namespace": "1.7.0"
+        "dp-core-infrastructure": "1.15.0",
+        "dp-configure-namespace": "1.15.0"
       }
     }
   package.json: |
@@ -49,7 +50,8 @@ data:
             "type": "Ingress Controller",
             "required": true,
             "resourceId": "INGRESS",
-            "resourceType": "PLATFORM"
+            "resourceType": "PLATFORM",
+            "otherResourceIds": ["GATEWAYAPI"]
           },
           {
             "type": "Storage Class",
@@ -57,6 +59,13 @@ data:
             "resourceId": "STORAGE",
             "resourceType": "PLATFORM",
             "otherResourceIds": [ "DBCONFIG" ]
+          },
+          {
+            "type": "GatewayAPI Controller",
+            "required": true,
+            "resourceId": "GATEWAYAPI",
+            "resourceType": "PLATFORM",
+            "otherResourceIds": ["INGRESS"]
           },
           {
             "type": "Database Resource",
@@ -73,7 +82,7 @@ data:
     recipe:
       helmCharts:
       - name: tibco-developer-hub
-        version: "1.14.5"
+        version: "1.15.14"
         namespace: ${NAMESPACE}
         repository:
           chartMuseum:
@@ -96,12 +105,6 @@ data:
                 enabled: true
                 className: ${INGRESS_CLASSNAME}
                 host: ${HOSTNAME}
-              publicApi:
-                  ingress:
-                    controllerName: ${INGRESS_CONTROLLER_NAME}
-                    config:
-                      className: ${INGRESS_CLASS_NAME}
-                      fqdn: ${INGRESS_FQDN}
         flags:
           install: true
           createNamespace: false
@@ -154,7 +157,7 @@ spec:
         - name: RECIPE_TARGET_LOCATION
           value: "/private/tsc/config/capabilities/platform"
         - name: RECIPE_RELEASE_VERSION
-          value: "1.14.0"
+          value: "1.15.0"
         - name: SPACE_SEPARATED_UNSUPPORTED_RECIPE_VERSIONS
           value: ""
         - name: OVERWRITE_RECIPE
