--- a/charts/tibco-cp-devhub/charts/tibcohub-recipes/values.yaml
+++ b/charts/tibco-cp-devhub/charts/tibcohub-recipes/values.yaml
@@ -1,4 +1,4 @@
-# Copyright © 2025. Cloud Software Group, Inc.
+# Copyright © 2023-2026. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
@@ -25,7 +25,7 @@ capabilities:
     # set to true for latest version of recipe
     isLatest: "true"
     # Timestamp of capability release
-    releaseDate: "2025/12/30"
+    releaseDate: "2026/01/30"
     # Either a link to document or the document itself specifying _what was fixed in this release.
     releaseNotes: "#cshid=new_features"
     # helm chart and image version for devhubprovisioner, default helm chart version is latest
@@ -36,7 +36,7 @@ image:
   name: common-distroless-base-debian-debug
   registry: ""
   repo: ""
-  tag: 12.11
+  tag: 12.13
   pullPolicy: IfNotPresent
 
 # Pod Security Context configuration
