--- a/charts/tibco-developer-hub/Chart.yaml
+++ b/charts/tibco-developer-hub/Chart.yaml
@@ -1,4 +1,5 @@
-# Copyright © 2025. Cloud Software Group, Inc.
+#
+# Copyright © 2023-2026. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -10,8 +11,8 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.14.5
-appVersion: "1.14.0"
+version: 1.15.14
+appVersion: "1.15.0"
 dependencies:
   - name: common
     repository: ""
